--- a/app/src/main/res/layout/splashactivity.xml
+++ b/app/src/main/res/layout/splashactivity.xml
@@ -6,18 +6,12 @@
     android:gravity="center"
     android:background="@color/white">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_launcher_foreground"
-        android:contentDescription="App Logo" />
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Spot it"
+        android:text="Artham Theriyalaya Raja"
         android:textSize="24sp"
         android:textColor="@android:color/black"
-        android:textStyle="bold"
+        android:textStyle="italic"
         android:layout_marginTop="16dp"/>
 </LinearLayout>
