Added toggle for floating button

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -10,5 +10,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/Settings_fragment" />
+    <ToggleButton
+        android:id="@+id/toggleButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textOn="ON"
+        android:textOff="OFF" />
 
 </FrameLayout>
