--- a/app/src/main/res/layout/activitymain.xml
+++ b/app/src/main/res/layout/activitymain.xml
@@ -11,22 +11,30 @@
         android:layout_height="?attr/actionBarSize"
         android:background="@color/white"
         app:title="Spot It"
-        android:elevation="4sp"
-        app:titleTextColor="#5FFFC8"/>
+        app:titleTextAppearance="@style/ToolbarTitleStyle"
+        app:titleTextColor="#5FCCC8"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@android:color/darker_gray"/>
+
     <!-- Fragment Container -->
     <FrameLayout
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"/>
-
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@android:color/darker_gray"/>
     <!-- Bottom Navigation -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?android:attr/windowBackground"
+        android:background="@color/white"
         app:menu="@menu/nav_bar"
-        app:itemIconTint="@color/black"
+        app:itemIconTint="#5FCCC8"
         app:itemTextColor="@color/black"/>
 </LinearLayout>
