--- a/app/src/main/res/menu/nav_bar.xml
+++ b/app/src/main/res/menu/nav_bar.xml
@@ -2,13 +2,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/nav_history"
+        android:icon="@drawable/history_icon"
         android:title="History" />
 
     <item
         android:id="@+id/nav_home"
+        android:icon="@drawable/home_icon"
         android:title="Home" />
 
     <item
         android:id="@+id/nav_settings"
+        android:icon="@drawable/settings_icon"
         android:title="Settings" />
 </menu>
