--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,17 +6,12 @@
         <item name="windowSplashScreenAnimatedIcon">@drawable/spotit_bg_placeholdet</item>
         <item name="preferenceTheme">@style/PreferenceThemeOverlay</item>
         <!-- Primary brand color. -->
-        <item name="colorSurface">@color/white</item>
-        <item name="colorSurfaceVariant">#000000</item>
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">@android:color/white</item>
+        <item name="android:windowLightStatusBar">true</item>
     </style>
-
 </resources>
