--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,9 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="dark">#000000</color>
-    <color name="spot_text_color">#FFFFFF</color>  <!-- White Text -->
-    <color name="spot_text_stroke">#888888</color> <!-- Light Gray Stroke -->
-    <color name="it_text_color">#FF4081</color>   <!-- Accent Pink for 'it' -->
-    <color name="it_text_stroke">#FFFFFF</color>  <!-- White Stroke -->
-
+    <color name="spot_text_color">#FFFFFF</color>
+    <color name="spot_text_stroke">#888888</color>
+    <color name="it_text_color">#FF4081</color>
 </resources>
