--- a/app/src/main/res/xml/accesscibility_service_config.xml
+++ b/app/src/main/res/xml/accesscibility_service_config.xml
@@ -1,7 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
 <accessibility-service
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:packageNames="com.dakshin.button"
+    android:packageNames="com.developersunit.spot_it_hackfes2k25"
+    android:accessibilityEventTypes="typeAllMask"
     android:accessibilityFeedbackType="feedbackGeneric"
     android:notificationTimeout="100"
     android:canRetrieveWindowContent="true"/>
